# mlops-cicd-pipleine

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-staging.yml  pr.yml
scripts/: compare_metrics.py
src/: data.py  evaluate.py  model.py  train.py
src/inference/: app.py
tests/: test_data.py  test_evaluate.py  test_model.py
